FIX [ADD] : css align

--- a/media/cv-screen.css
+++ b/media/cv-screen.css
@@ -67,7 +67,7 @@ p {
 
 code {
   font: normal normal;
-  font-size: 60%;
+  font-size: 80%;
   /*line-height: 1em;*/
   font-family: Menlo,monospace,sans-serif;
   color: #aaa;
@@ -133,7 +133,7 @@ h2 {
   color: #a00;
   margin-top: 3em;
   position: relative;
-  top: 1.4em;
+  top: 1.1em;
   text-align: right;
   width: 20%;
 }
